--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-terminal-ui": "^1.0.0",
+    "socket.io-client": "^4.5.4",
     "typescript": "4.9.4"
   }
 }
